# react-native-pdf-maker

./: .eslintrc.js  CMakeLists-IOS.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  hello.cpp  package.json  react-native-pdf-maker.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pdfmaker/: PdfMakerModule.java  PdfMakerPackage.java
android/src/newarch/: PdfMakerSpec.java
android/src/oldarch/: PdfMakerSpec.java
cpp/: hello.cpp  react-native-pdf-maker.cpp  react-native-pdf-maker.h
example/: app.json  index.js  package.json  react-native.config.js
example/android/: kls_database.db  link-assets-manifest.json  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/pdfmakerexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile  link-assets-manifest.json
example/ios/PdfMakerExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PdfMakerExample.xcodeproj/: project.pbxproj
example/ios/PdfMakerExample.xcodeproj/xcshareddata/xcschemes/: PdfMakerExample.xcscheme
example/ios/PdfMakerExample.xcworkspace/: contents.xcworkspacedata
example/ios/PdfMakerExampleTests/: PdfMakerExampleTests.m
example/src/: App.tsx  PDFExample.tsx
ios/: PDFPageFactory.h  PDFPageFactory.mm  PDFWriterFactory.h  PDFWriterFactory.mm  PdfMaker.h  PdfMaker.mm
src/: NativePdfMaker.ts  PDFDocument.ts  PDFMaker.ts  PDFPage.ts  PdfMakerInterface.ts  createNative.ts  index.tsx
